# NRU-110v-WebRTC-VideoStream

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  make_container.sh
demo/: app.py  stream.py  utils.py
demo/static/: webrtc.js  webrtc_single_recording.js
demo/templates/: index.html  macros.html  raw_webRTC.html  webRTC.html
docker/: run.sh
utils/codec/: gstEncoder.cpp  gstWebRTC.cpp
utils/network/: WebRTCServer.cpp
utils/video/: videoOutput.cpp
